--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compression": "^1.7.1",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "mongoose": "5.11.15",
+    "mongoose": "6.13.6",   //Completar vvs4//
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
